<resources>
    <string name="app_name">ChatApp</string>
    <string name="welcome">Welcome!</string>
    <string name="username_login">Username</string>
    <string name="password_login">Password</string>
    <string name="email_login">Email</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email_register">Email</string>
    <string name="username_register">Username</string>
    <string name="password_register">Password</string>
    <string name="login">Login</string>
    <string name="i_do_not_have_an_account">I do not have an account</string>
</resources>