<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1B1B1B"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/username_registerActivity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="310dp"
        android:layout_marginEnd="101dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:hint="@string/username_register"
        android:inputType="textPersonName"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/password_registerActivity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password_register"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toBottomOf="@+id/email_registerActivity_txt" />

    <EditText
        android:id="@+id/email_registerActivity_txt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_register"
        android:gravity="center"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toBottomOf="@+id/username_registerActivity_txt" />

    <Button
        android:id="@+id/button_registerActivity_btt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="@+id/password_registerActivity_txt"
        app:layout_constraintStart_toStartOf="@+id/password_registerActivity_txt"
        app:layout_constraintTop_toBottomOf="@+id/password_registerActivity_txt" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="147dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/email_registerActivity_txt"
        app:layout_constraintEnd_toEndOf="@+id/username_registerActivity_txt"
        app:layout_constraintStart_toStartOf="@+id/username_registerActivity_txt"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/already_have_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/already_have_an_account"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="@+id/button_registerActivity_btt"
        app:layout_constraintStart_toStartOf="@+id/button_registerActivity_btt"
        app:layout_constraintTop_toBottomOf="@+id/button_registerActivity_btt"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>